# palio_bot_v2

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  EVAL_PLAN.md  MULTI_FILE_IMPLEMENTATION.md  README.md  TODO.md  api_server.py  calendar.json  commands.txt  detailed_implementation_analysis.md  example_multi_file_usage.py  game_scores.json  leaderboard.json  leaderboard_editing_plan.md  main.py  palio.json  plan.md  pyproject.toml  requirements.txt  setup.py  telegram_bot.py  test_multi_file.py
audit/: 01-bugs.md  04-organization.md  05-repo-hygiene.md  README.md
data/: .gitignore  leaderboard.json  leaderboard_tmp.json  palio.json  palio_games_status.json
docker/: .env.example  Dockerfile.api  Dockerfile.telegram  README.md  docker-compose.yml
docs/: REFACTOR_PLAN.md  TODO.md  telegram_commands.txt
palio_bot/: __main__.py  agent.py  cli.py  cli_consumer.py  config.py  container.py  events.py  interfaces.py  json_editor_tool.py  leaderboard_updater.py  logging_config.py  models.py  stream.py  system.py  telegram_bot.py  telegram_consumer.py  text_editor_tool.py
palio_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
results/: 01_simple_reads__google-gemma-4-31b-it.json  02_game_completion__google-gemma-4-31b-it.json  03_palio_flow__google-gemma-4-31b-it.json  index.html
scripts/: build_results_viewer.py  generate_round_robin.py  restore.sh  restore_games_status.py  run_all_evals.sh  run_tmux.sh
tests/: conftest.py
website/: firebase-config.json  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.json
(+270 files in other folders)
